# nslite

./: .clang-format  .gitattributes  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: build-and-release.yml
data/core/: commandview.lua  common.lua  config.lua  docview.lua  filepresentation.lua  findview.lua  fontview.lua  init.lua  keymap.lua  rootview.lua  statusview.lua  style.lua  syntax.lua
data/core/commands/: command.lua  core.lua  doc.lua  findreplace.lua  root.lua
data/core/doc/: highlighter.lua  init.lua  search.lua  translate.lua
data/core/presentations/: image.lua
data/plugins/: autocomplete.lua  autoreload.lua  fileicons_nonicons.lua  language_batch.lua  language_c.lua  language_cmake.lua  language_cpp.lua  language_csharp.lua  language_css.lua  language_go.lua  language_java.lua  language_js.lua  language_lua.lua  language_make.lua  language_md.lua  language_python.lua  language_rust.lua  language_sh.lua  language_xml.lua  language_zig.lua  lsp.lua  macro.lua  projectsearch.lua  quote.lua  reflow.lua  treeview.lua  trimwhitespace.lua
data/user/: init.lua
src/: main.c  rencache.c  rencache.h  renderer.c  renderer.h
src/api/: api.c  api.h  document.c  document.h  lsp.c  renderer.c  renderer_font.c  renderer_image.c  syntax.c  syntax.h  system.c
src/lib/cjson/: README.md
src/lib/nanosvg/: README.md  nanosvg.h
src/lib/stb/: README.md  stb_image.c
src/utils/: macos.h  macos.m  path.c  path.h  utf8.c  utf8.h  window.c  window.h
